[teamdev-auth]: regenerate swagger
