# src/swagger/swagger.json
@@ -26,7 +26,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -73,7 +73,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -126,7 +126,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -200,7 +200,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -248,7 +248,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -302,7 +302,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -365,7 +365,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -433,7 +433,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -498,7 +498,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -562,7 +562,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -618,7 +618,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -676,7 +676,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -742,7 +742,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -789,7 +789,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -863,7 +863,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -911,7 +911,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -955,111 +955,6 @@
                 }
             }
         },
-        "/api/v2/sign-in": {
-            "post": {
-                "description": "sing in",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth/v2"
-                ],
-                "summary": "Sign in",
-                "parameters": [
-                    {
-                        "description": "User body",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.SignInRequest"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Admin auth secret",
-                        "name": "admin_secret",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Token",
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.TokenResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Error",
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Error",
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Error",
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Error",
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v2/sign-out": {
-            "post": {
-                "description": "sing out",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth/v2"
-                ],
-                "summary": "Sign out",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "JWT-format token",
-                        "name": "X-User-Token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Error",
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Error",
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Error",
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v2/sign-up": {
             "post": {
                 "description": "sing up",
@@ -1072,19 +967,11 @@
                 "summary": "Sign up",
                 "parameters": [
                     {
-                        "description": "User body",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.SignUpRequest"
-                        }
-                    },
-                    {
                         "type": "string",
-                        "description": "Admin auth secret",
-                        "name": "admin_secret",
-                        "in": "query"
+                        "description": "TG-ID token",
+                        "name": "X-User-Token",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1100,8 +987,8 @@
                             "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
                         }
                     },
-                    "401": {
-                        "description": "Error",
+                    "409": {
+                        "description": "user already exists",
                         "schema": {
                             "$ref": "#/definitions/git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.ErrorResponse"
                         }
@@ -1128,7 +1015,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "JWT-format token",
+                        "description": "TG-ID token",
                         "name": "X-User-Token",
                         "in": "header",
                         "required": true
@@ -1314,43 +1201,6 @@
                 },
                 "year": {
                     "type": "integer"
-                }
-            }
-        },
-        "git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.SignInRequest": {
-            "type": "object",
-            "properties": {
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.SignUpRequest": {
-            "type": "object",
-            "properties": {
-                "login": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "role": {
-                    "type": "string"
-                }
-            }
-        },
-        "git_iu7_bmstu_ru_vai20u117_testing_src_internal_api_v2_model.TokenResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string",
-                    "example": "jwt-format token"
                 }
             }
         }
